# kdrive_rs

./: .gitignore  Cargo.toml  export.ps1  export.sh  start_test_server.sh.example
adapters/: Cargo.toml
adapters/src/: lib.rs
adapters/src/driven/: authenticator.rs  build_time_env_var_configurator_adapter.rs  environment_variables.rs  event_bus_adapter.rs  file_token_store_adapter.rs  kdrive.rs  kdrive_authenticator_adapter.rs  key_ring_token_store_adapter.rs  mod.rs  token_store_file_adapter.rs  token_store_key_ring_adapter.rs
adapters/src/driven/templates/: no_oauth_code_error.html  oauth_configuration_error.html
adapters/test_assets/: .test.env  fake_environment_variables.rs  mod.rs
clients/desktop/: Cargo.toml  Dioxus.toml  build.rs
clients/desktop/assets/: kdrive_icon.icns  tailwind.css
clients/desktop/assets/styling/: main.css
clients/desktop/src/: main.rs  tauri_commands.rs
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src/adapters/: dioxus_adapter.rs  dioxus_ui_adapter.rs  grpc_server_adapter.rs  mod.rs  ui_adapter.rs
clients/desktop/src/adapters/test_helpers/: fake_kdrive_service.rs  mod.rs
clients/desktop/src/domain/: client.rs  errors.rs  events.rs  mod.rs  ui_core.rs  view.rs
clients/desktop/src/domain/test_helpers/: fake_server_adapter.rs  fake_ui_adapter.rs  mod.rs
clients/desktop/src/ports/driven/: mod.rs  server_driven_port.rs  ui_driven_port.rs
clients/desktop/src/ports/driving/: mod.rs  ui_driving_port.rs
clients/desktop/src/ui/: mod.rs  text.rs  utils.rs
clients/desktop/src/ui/components/: mod.rs  title_banner.rs
clients/desktop/src/ui/views/: connecting_view.rs  error_view.rs  home.rs  login.rs  mod.rs
clients/desktop/src/views/: login.rs  mod.rs
common/: Cargo.toml  build.rs  i18n.toml  kdrive.proto
common/i18n/en-GB/: app.ftl
common/i18n/nl-NL/: app.ftl
common/i18n_loader/: Cargo.toml
common/i18n_loader/src/: lib.rs  text_keys.rs
common/src/: lib.rs
common/src/adapters/: i18n_embedded_adapter.rs  mod.rs
common/src/domain/: defaults.rs  directory_listing.rs  errors.rs  language.rs  mod.rs  text_keys.rs
common/src/ports/: i18n_driven_port.rs  mod.rs
engine/: Cargo.toml
engine/src/domain/: auth.rs  authenticator.rs  callback_endpoint.rs  configuration.rs  configurator.rs  configurator_defaults.rs  engine.rs  environment_variable_keys.rs  errors.rs  events.rs  mod.rs  token_store.rs  tokens.rs
engine/src/domain/default_values/: configurator_defaults.rs  mod.rs
engine/src/domain/test_helpers/: fake_authenticator_adapter.rs  fake_configurator_adapter.rs  fake_event_bus.rs  fake_token_store_adapter.rs  mod.rs  test_store.rs
engine/src/ports/driven/: authenticator_driven_port.rs  cloud_driven_port.rs  configurator_driven_port.rs  environment_variables_port.rs  event_bus_driven_port.rs  mod.rs  token_store_driven_port.rs
engine/src/ports/driving/: authenticator_driving_port.rs  mod.rs  token_store_driving_port.rs
frontend/: Cargo.toml
frontend/src/: app.rs  frontend_errors.rs  main.rs
frontend/src-tauri/: tauri.conf.json
kdrive_service/: Cargo.toml  build.rs
kdrive_service/examples/: auth_flow.rs
kdrive_service/proto/: kdrive.proto
kdrive_service/src/: default_values.rs  error.rs  grpc_handler.rs  lib.rs  main.rs
kdrive_service/tests/: grpc_integration_tests.rs
proto/: kdrive.proto
server/: Cargo.toml  start_test_server.ps1
server/adapters/: .env.example  Cargo.toml
server/adapters/src/driven/: build_time_env_var_configurator_adapter.rs  event_bus_adapter.rs  kdrive_authenticator_adapter.rs  metadata_sqlite_adapter.rs  mod.rs  token_store_file_adapter.rs  token_store_key_ring_adapter.rs
server/adapters/src/driven/templates/: oauth_success.html
server/engine/: Cargo.toml
server/engine/.cargo/: config.toml
server/engine/src/: lib.rs
server/engine/src/domain/: callback_endpoint.rs  cloud_sync_state.rs  configuration.rs  engine.rs  errors.rs  events.rs  metadata.rs  mod.rs  tokens.rs
server/engine/src/domain/default_values/: general_defaults.rs  mod.rs
server/engine/src/domain/test_helpers/: fake_authenticator_adapter.rs  fake_authenticator_adapter_slow.rs  fake_configurator_adapter.rs  fake_event_bus.rs  fake_i18n.rs  fake_metadata_store.rs  fake_token_store.rs  fake_token_store_adapter.rs  mod.rs  test_engine_builder.rs
server/engine/src/ports/driven/: authenticator_driven_port.rs  configurator_driven_port.rs  event_bus_driven_port.rs  metadata_driven_port.rs  mod.rs  token_store_driven_port.rs
server/engine/src/ports/driving/: authenticator_driving_port.rs  data_driving_port.rs  mod.rs  token_store_driving_port.rs
server/service/: Cargo.toml
server/service/examples/: auth_flow.rs
server/service/src/: error.rs  grpc_handler.rs  lib.rs  main.rs
server/service/tests/: grpc_integration_tests.rs
