[package]
name = "common"
version = "0.1.0"
authors = ["Ger Senden"]
edition = "2024"

[dependencies]
const_format = "0.2.35"
i18n-embed = { version = "0.16.0"  , features = ["fluent-system", "desktop-requester"]}
rust-embed = "8.9.0"
unic-langid = { version = "0.9.6", features = ["unic-langid-macros"] }
strum = "0.27.2"
strum_macros = "0.27.2"
i18n-embed-fl = "0.10.0"
thiserror = "2.0.17"
fluent-bundle = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
i18n_loader = { path = "i18n_loader" }

[build-dependencies]
i18n_loader = { path = "i18n_loader" }