[package]
name = "kdrive_desktop"
version = "0.1.0"
authors = ["Ger Senden"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
dioxus = { version = "0.7.1", features = ["router"] }
tonic = "0.14.2"
tokio = "1.48.0"

webbrowser = "1.0.6"
arboard = "3.6.1"
async-trait = "0.1.89"
tokio-stream = "0.1.17"
futures-core = "0.3.31"
futures-util = "0.3.31"
image = "0.25.9"

[dev-dependencies]

[build-dependencies]
tonic-prost-build = "0.14.2"

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
