[package]
name = "i18n_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
i18n-embed = { version = "0.16.0", features = ["fluent-system"] }
rust-embed = "8.9.0"
fluent-bundle = "0.16.0"
thiserror = "2.0.17"
strum = "0.27.2"
strum_macros = "0.27.2"
unic-langid = { version = "0.9.6", features = ["unic-langid-macros"] }
serde = { version = "1.0", features = ["derive"] }