[package]
name = "adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
engine = { path = "../engine"}
oauth2 = "5.0.0"
tokio = "1.48.0"
axum = "0.8.6"
tower = "0.5.2"
axum-server = "0.7.2"
async-trait = "0.1.89"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"
serde_json = "1.0.145"
keyring = "3.6.3"

[lib]
doctest = false
