[package]
name = "kdrive_service"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
adapters = { path = "../adapters" }
tokio = {  version = "1.48.0", features = ["full", "macros", "rt-multi-thread"] }
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
thiserror = "2.0.17"
const_format = "0.2.35"


[build-dependencies]
tonic-prost-build = "0.14.2"

[[example]]
name = "auth_flow"